--- a/about.qmd
+++ b/about.qmd
@@ -1,50 +1,45 @@
 ---
-title: "Let's connect !"
+title: "Pratik Kumar"
+subtitle: "*'If you want something very badly, set it free. If it comes back to you, it's yours forever. If it doesn't, it was never yours to begin with.'* <br><br> - Indecent Proposal (1993)" 
 about:
-  image: "images/profile-1.png"
+  image: "images/DP.png"
+  image-width: 15em
+  image-shape: rounded
   template: trestles
   links:
     - icon: twitter
-      text: Twitter
       href: https://twitter.com/Pratikpkb
     - icon: linkedin
-      text: LinkedIn
       href: https://www.linkedin.com/in/pratik-kumar04/
     - icon: github
-      text: Github
       href: https://github.com/pr2tik1
-    - icon: kaggle
-      text: Kaggle
-      href: https://www.kaggle.com/pr2tik1
     - icon: medium
-      text: Medium
       href: https://medium.com/@pr2tik1
-    - icon: leetcode
-      text: Leetcode
-      href: https://leetcode.com/pr2tik1/
     - icon: instagram
-      text: Instagram
       href: https://instagram.com/pratikkumar04
-
+    # - icon: leetcode
+    #   text: Leetcode
+    #   href: https://leetcode.com/pr2tik1/
+    # - icon: kaggle
+    #   text: Kaggle
+    #   href: https://www.kaggle.com/pr2tik1
+    
 ---
 
-## Hi 👋 I am Pratik Kumar!
+Hello! 👋 I am a software engineer who loves working on websites, AI, and data-related projects. When I'm not coding, I enjoy going on treks, exploring new cuisines, and playing sports like football, badminton, cricket, and table tennis. I love photography and watching exciting movies like "Edge of Tomorrow". And I am always up for a coffee !
 
-I am a software engineer with a passion for web application development, AI, deep learning, and building data-driven projects. Currently, I am working as a software engineer at a drug discovery startup in the bioinformatics domain - **Elucidata**.
+Currently, I am working at [**Elucidata**](https://www.elucidata.io/), solving some of the complex problems in drug discovery.
 
-## 👨🏻‍💻 Experience
+## 👨🏻‍💻 Work Experience
 ---
 
-**Bayer Cropscience** | May 2019 - June 2019 <br>
-  - Data Science Intern
+**Elucidata** | Aug 2021 - Present <br>
+  - Software Engineer (current) <br>
+  - Data Analyst
   
 **Elucidata** | May 2021 - Aug 2021 <br>
   - Data Science Intern
 
-**Elucidata** | Aug 2021 - Present <br>
-  - Data Analyst <br>
-  - Software Engineer
+**Bayer Cropscience** | May 2019 - June 2019 <br>
+  - Data Science Intern
 
-
-<!-- ## 📄 Resume
---- -->
