Changes to be committed: 	modified:   .gitignore 	modified:   _site/about.html 	deleted:    _site/images/profile-1.png 	modified:   _site/index.html 	modified:   _site/license.html 	modified:   _site/listings.json 	modified:   _site/posts/hierarchical/Plotly-Sunburst.html 	new file:   _site/posts/optimizing-r-shiny/opt-shiny.html 	new file:   _site/posts/post-images/OIG.jpeg 	modified:   _site/posts/remote-extension/remote-containers.html 	deleted:    _site/robots.txt 	modified:   _site/search.json 	modified:   _site/site_libs/bootstrap/bootstrap.min.css 	modified:   _site/trademark.html 	modified:   about.qmd 	new file:   install.sh 	new file:   posts/data-viz/data-viz.ipynb 	new file:   posts/data-viz/data-viz.qmd 	deleted:    posts/hierarchical/.ipynb_checkpoints/Plotly-Sunburst-checkpoint.ipynb 	new file:   posts/optimizing-r-shiny/opt-shiny.qmd 	new file:   posts/post-images/OIG.jpeg 	deleted:    posts/post-images/nine.jpeg 	deleted:    posts/post-images/nineteen.jpeg 	deleted:    posts/post-images/one.jpeg 	deleted:    posts/post-images/six.jpeg 	deleted:    posts/post-images/sixteen.jpeg 	deleted:    posts/post-images/ten.jpeg 	deleted:    posts/post-images/three.jpeg 	deleted:    posts/post-images/tweleve.jpeg 	deleted:    posts/post-images/twenty-two.jpeg 	deleted:    posts/post-images/twentythree.jpeg 	deleted:    posts/post-images/two.jpeg

--- a/about.qmd
+++ b/about.qmd
@@ -17,18 +17,17 @@ about:
       href: https://medium.com/@pr2tik1
     - icon: instagram
       href: https://instagram.com/pratikkumar04
-    # - icon: leetcode
-    #   text: Leetcode
-    #   href: https://leetcode.com/pr2tik1/
-    # - icon: kaggle
-    #   text: Kaggle
-    #   href: https://www.kaggle.com/pr2tik1
+    - icon: file-earmark-person-fill
+      text: Resume
+      href: https://drive.google.com/file/d/1bO2scT5bjixISLEEfXicsK6k-TkwPAHC/view?usp=sharing
     
 ---
 
 Hello! 👋 I am a software engineer who loves working on websites, AI, and data-related projects. When I'm not coding, I enjoy going on treks, exploring new cuisines, and playing sports like football, badminton, cricket, and table tennis. I love photography and watching exciting movies like "Edge of Tomorrow". And I am always up for a coffee !
 
-Currently, I am working at [**Elucidata**](https://www.elucidata.io/), solving some of the complex problems in drug discovery.
+Currently, I am working at [**Elucidata**](https://www.elucidata.io/), solving some of the complex problems in drug discovery. 
+
+View my **resume** [here](https://drive.google.com/file/d/1bO2scT5bjixISLEEfXicsK6k-TkwPAHC/view?usp=sharing).
 
 ## 👨🏻‍💻 Work Experience
 ---
